--- a/Source/EasyBindings.Tests/EasyBindings.Tests.csproj
+++ b/Source/EasyBindings.Tests/EasyBindings.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BindingServices\BindingServices.csproj" />
+    <ProjectReference Include="..\EasyBindings\EasyBindings.csproj" />
   </ItemGroup>
 
 </Project>
