--- a/Source/EasyBindings/EasyBindings.csproj
+++ b/Source/EasyBindings/EasyBindings.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -20,6 +20,10 @@
     <PackageReleaseNotes>First version.</PackageReleaseNotes>
     <PackageIcon>Icon.png</PackageIcon>
     <PackageTags>mvvm wpf bindings</PackageTags>
+    <Version>1.0.0</Version>
+    <Company>Ilnaz</Company>
+    <PackageId>EasyBindings</PackageId>
+    <Product>EasyBindings</Product>
   </PropertyGroup>
 
   <ItemGroup>
