--- a/Source/EasyBindings/EasyBindings.csproj
+++ b/Source/EasyBindings/EasyBindings.csproj
@@ -17,10 +17,10 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <EnforceCodeStyleInBuild>False</EnforceCodeStyleInBuild>
-    <PackageReleaseNotes>First version.</PackageReleaseNotes>
+    <PackageReleaseNotes>Naming fixes.</PackageReleaseNotes>
     <PackageIcon>Icon.png</PackageIcon>
-    <PackageTags>mvvm wpf bindings</PackageTags>
-    <Version>2.0.0</Version>
+    <PackageTags>mvvm wpf binding databinding observer observable</PackageTags>
+    <Version>4.0.0</Version>
     <Company>Ilnaz</Company>
     <PackageId>EasyBindings</PackageId>
     <Product>EasyBindings</Product>
