--- a/Source/EasyBindings/EasyBindings.csproj
+++ b/Source/EasyBindings/EasyBindings.csproj
@@ -9,7 +9,6 @@
     <Description>EasyBindings is a tiny WPF-inspired library that makes it possible to perform WPF-like trigger, property and command bindings outside of WPF platform.</Description>
     <Copyright>Copyright © 2023 Ilnaz Khasanov</Copyright>
     <PackageProjectUrl>https://github.com/Ilnazz/EasyBindings</PackageProjectUrl>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Ilnazz/EasyBindings</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <IncludeSymbols>True</IncludeSymbols>
@@ -17,14 +16,21 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <EnforceCodeStyleInBuild>False</EnforceCodeStyleInBuild>
-    <PackageReleaseNotes>Naming fixes.</PackageReleaseNotes>
-    <PackageIcon>Icon.png</PackageIcon>
+    <PackageReleaseNotes>Final version.</PackageReleaseNotes>
     <PackageTags>mvvm wpf binding databinding observer observable</PackageTags>
     <Version>4.0.0</Version>
     <Company>Ilnaz</Company>
     <PackageId>EasyBindings</PackageId>
     <Product>EasyBindings</Product>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
