--- a/src/EasyBindings/EasyBindings.csproj
+++ b/src/EasyBindings/EasyBindings.csproj
@@ -15,14 +15,21 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <EnforceCodeStyleInBuild>False</EnforceCodeStyleInBuild>
-    <PackageReleaseNotes>Final version.</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <PackageTags>mvvm wpf binding databinding observer observable</PackageTags>
-    <Version>4.0.0</Version>
+    <Version>0.0.1</Version>
     <Company>Ilnaz</Company>
     <PackageId>EasyBindings</PackageId>
     <Product>EasyBindings</Product>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
