--- a/samples/EasyBindings.Samples/EasyBindings.Samples.csproj
+++ b/samples/EasyBindings.Samples/EasyBindings.Samples.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EasyBindings.Tests\EasyBindings.Tests.csproj" />
-    <ProjectReference Include="..\EasyBindings\EasyBindings.csproj" />
+    <ProjectReference Include="..\..\source\EasyBindings\EasyBindings.csproj" />
+    <ProjectReference Include="..\..\tests\EasyBindings.Tests\EasyBindings.Tests.csproj" />
   </ItemGroup>
 
 </Project>
